--- a/public/locales/en/aboutPage.json
+++ b/public/locales/en/aboutPage.json
@@ -67,7 +67,7 @@
   },
   "publicDocs": {
     "title": "Public documents",
-    "body": "For more information and public documents, visit <a class='standard-link standard-link--underscore-hover' href='https://redmine.login.no/projects/wiki/wiki'>Redmine <i class='logfont-redmine'></i></a>, here you can find the following types of documents:",
+    "body": "For more information and public documents, visit our <a class='standard-link standard-link--underscore-hover' href='https://wiki.login.no/en/public/docs'>wiki<i class='logfont-wikijs'></i></a>, here you can find the following types of documents:",
     "bulletPoints": {
       "agendas": "Agenda",
       "minutes": "Minutes",
