--- a/public/locales/en/aboutPage.json
+++ b/public/locales/en/aboutPage.json
@@ -52,8 +52,8 @@
     },
     "bedkom": {
       "title": "Bedkom",
-      "intro": "Bedkom is Login's golden calf and without them the money wouldn't have flowed in and none of the other committees could do the trick!",
-      "body": "Bedkom is Login's public face and is responsible for Login's social media channels. Bedkom monitors our ticket system and responds to company contacts. They also work to give students a sneak peek into the business world, by arranging company presentations and a career fair called The Cyberdays each semester. Furthermore, Bedkom helps to represent Login at events and also assists with the recruitment of new members."
+      "intro": "BedKom accounts for the majority of our income, where all the money is going back to our students in the form of all the exciting events that our other committees organize throughout the year!",
+      "body": "BedKom often acts as Login's image towards the company representatives visiting our campus in Gjøvik. BedKom manages the majority of communication with all of the companies contacts through our ticketing system and responds to incoming emails and inquiries. They also work to provide students with insight and a pathway into the business world by organizing company presentations and career fairs, which are also Login's main source of income! "
     },
     "ctfkom": {
       "title": "CTFkom",
